# ts-project-repro

./: .gitignore  WORKSPACE  package.json
some-package/: BUILD.bazel  tsconfig.json
some-package/src/: add.test.ts  add.ts
